adding "basic structure" section

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -22,3 +22,42 @@ If you were to create this from scratch, **without using WSBLib**, you'd have to
 7. Get the requested route response;
 8. Format HTTP response data;
 9. Send response to customer.
+
+We've shortened all these steps to **just 4**, making it easy to develop your framework or web server.
+
+## Basic structure of a WSBLib server
+
+Next, we will show the basic structure of a WSBLib server and explain the function of each of the classes, methods and others. Here's the [code for this simple server](https://github.com/firlast/wsblib/tree/master/examples/simple-server):
+
+```python
+from wsblib.route import Route
+from wsblib.server import Client, Server
+from wsblib.request import ProcessRequest
+from wsblib.request import RequestData
+from wsblib import log
+
+
+def index():
+    return 'Hello World!'
+
+
+index_route = Route(index, '/')
+request = ProcessRequest((index_route,))
+
+server = Server()
+server.start('127.0.0.1', 2808)
+
+print('Server running in http://127.0.0.1:2808')
+
+while True:
+    client = server.wait_client()
+    processed_request = request.process(client)
+
+    if processed_request:
+        request_data = processed_request.request
+        response = processed_request.get_response()
+        processed_request.send_response(response)
+        log.log_request(response, request_data)
+```
+
+This example server **does not use threads**, that is, it can only serve another request after the current request is completed. You can rearrange this code so that threads are used.
