adding "creating routes" section

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -61,3 +61,26 @@ while True:
 ```
 
 This example server **does not use threads**, that is, it can only serve another request after the current request is completed. You can rearrange this code so that threads are used.
+
+### Creating routes
+
+In the code snippet below, we create a route on the `/` path, which will call the `index_route` function to get a response and return it to the client:
+
+```python
+def index():
+    return 'Hello World!'
+
+index_route = Route(index, '/')
+```
+
+This class is used to **manipulate and obtain data** from the route requested by the user, being able to check methods, obtain parameters (for dynamic routes) and others. To ***create an instance of this class***, the required arguments are:
+
+1. callback: Function to be called when the route is requested (`FunctionType`);
+2. path: Route path (`str`);
+3. methods: Route allowed methods, the default value is ('GET') (`tuple`, optional).
+
+If we want, for example, to create a route that creates, reads, updates and deletes data (CRUD), the arguments passed would be like this:
+
+```python
+profile_route = Route(profile, '/profile', methods=('GET', 'POST', 'PUT', 'DELETE'))
+```
