--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -25,7 +25,7 @@ If you were to create this from scratch, **without using WSBLib**, you'd have to
 
 We've shortened all these steps to **just 4**, making it easy to develop your framework or web server.
 
-## Basic structure of a WSBLib server
+## Structure of a WSBLib server
 
 Next, we will show the basic structure of a WSBLib server and explain the function of each of the classes, methods and others. Here's the [code for this simple server](https://github.com/firlast/wsblib/tree/master/examples/simple-server):
 
