explain dynamic routes

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -84,3 +84,13 @@ If we want, for example, to create a route that creates, reads, updates and dele
 ```python
 profile_route = Route(profile, '/profile', methods=('GET', 'POST', 'PUT', 'DELETE'))
 ```
+
+#### Dynamic routes
+
+There is a special condition for the `path` argument. If you want to create a dynamic route, where you can access the data that was placed in the path, the path contains "variables" between "<" and ">" signs, see an example:
+
+```python
+dynamic_route = Route(users, '/user/<username>')
+```
+
+For the `users` function to be called, the `<username>` parameter must be filled in, for example: `/users/firlast`. Otherwise, a **404 (Not Found)** error will be returned to the client.
