--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -77,7 +77,7 @@ This class is used to **manipulate and obtain data** from the route requested by
 
 1. callback: Function to be called when the route is requested (`FunctionType`);
 2. path: Route path (`str`);
-3. methods: Route allowed methods, the default value is ('GET') (`tuple`, optional).
+3. methods: Route allowed methods, the allowed method by default is "GET" (`tuple`, optional).
 
 If we want, for example, to create a route that creates, reads, updates and deletes data (CRUD), the arguments passed would be like this:
 
