updating explanation in dynamic routes section

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -93,7 +93,7 @@ There is a special condition for the `path` argument. If you want to create a dy
 dynamic_route = Route(users, '/user/<username>')
 ```
 
-For the `users` function to be called, the `<username>` parameter must be filled in, for example: `/users/firlast`. Otherwise, a **404 (Not Found)** error will be returned to the client. You can access the dynamic route parameter later through the request data, getting the parameter value through the name of the parameter to get, for example:
+For the `users` function to be called, the `<username>` parameter must be filled in, for example: `/users/firlast`. Otherwise, a **404 (Not Found)** error will be returned to the client. You can access the dynamic route parameter later through the request data, getting the value of the parameter through its name, for example:
 
 ```python
 def users(request):
