--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -107,4 +107,4 @@ There are some methods of the `Route` class that can be accessed to check and ge
 - `get_parameters`: This function receives an argument called `requested_path`, of type `str`, if the registered route is dynamic, this method will obtain these parameters from the `requested_path` argument. If the registered route path does not match the requested path, `False` is returned. This method **does not need to be used** directly.
 - `match_route`: Checks if the path specified by the `path` argument is the same as the path of the registered route.
 - `accept_method`: Checks if the method passed by the argument is accepted by the route.
-- `get_route_response`: Gets the return of the route's callback function to use as the route's response. The `request` argument is only passed as an argument to the callback function, if it requests, so that it can get data from the request. This method turns the function's response into an instance of the `http_pyparser.Response` class
+- `get_route_response`: Gets the return of the route's callback function to use as the route's response. The `request` argument is only passed as an argument to the callback function, if it requests, so that it can get data from the request. This method turns the function's response into an instance of the `http_pyparser.Response` class.
