adding "preparing for process request" section

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -108,3 +108,21 @@ There are some methods of the `Route` class that can be accessed to check and ge
 - `match_route`: Checks if the path specified by the `path` argument is the same as the path of the registered route.
 - `accept_method`: Checks if the method passed by the argument is accepted by the route.
 - `get_route_response`: Gets the return of the route's callback function to use as the route's response. The `request` argument is only passed as an argument to the callback function, if it requests, so that it can get data from the request. This method turns the function's response into an instance of the `http_pyparser.Response` class.
+
+### Preparing for processing requests
+
+There is a class called `ProcessRequest` that processes the request and returns an **object ready**, with data from the request and the response of the requested route. To create an instance of this class, it is necessary to pass a tuple (or list) containing ***all the routes*** of the application, that is, all instances of the `Route` class, see:
+
+```python
+def index():
+    return 'Hello World!'
+
+# create a route in "/" path
+index_route = Route(index, '/')
+# instantiating the class to process requests
+request = ProcessRequest((index_route,))
+```
+
+In the example above, we are passing the `index` route (in the path "/") as an argument to the `ProcessRequest` class inside a tuple.
+
+The `ProcessRequest` class has a single public method, the `process` method, which processes a client request. This method will be responsible for verifying whether the requested route exists in the application and whether the requested method is accepted by the route.
