adding "initializing the server" section

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -126,3 +126,17 @@ request = ProcessRequest((index_route,))
 In the example above, we are passing the `index` route (in the path "/") as an argument to the `ProcessRequest` class inside a tuple.
 
 The `ProcessRequest` class has a single public method, the `process` method, which processes a client request. This method will be responsible for verifying whether the requested route exists in the application and whether the requested method is accepted by the route.
+
+### Initializing the server
+
+The `Server` class is responsible for **manipulating the socket** of the application, receiving connections from clients and manipulating this data. In the code snippet below, we create an instance of the `Server` class and use the `Server.start` method to start the server, passing the host and port to be used:
+
+```python
+server = Server()
+# listening for client connections
+server.start('127.0.0.1', 2808)
+```
+
+With that, the host is ready to receive requests, but **still won't respond to any connection**, because the server simply still doesn't accept connections. To receive requests, the `Server.wait_client` method is used. This method will wait for a request, after receiving it, an instance of the `Client` class is returned, storing the client data and the raw HTTP message.
+
+> The `Client` class will very rarely need to be used ***by you***, it will only be used by the `ProcessRequest.process` method to process the request.
