update simple-server example to 1.0.0 version code

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -55,9 +55,18 @@ while True:
 
     if processed_request:
         request_data = processed_request.request
-        response = processed_request.get_response()
-        processed_request.send_response(response)
+        process_type = processed_request.type
+
+        if process_type == 'route':
+            response = processed_request.route.get_route_response(request_data, use_globals)
+        else:
+            response = processed_request.route.get_callback_response(request_data)
+
+        http = http_pyparser.response.make_response(response)
+
         log.log_request(response, request_data)
+        client.send_message(http)
+        client.destroy()
 ```
 
 This example server **does not use threads**, that is, it can only serve another request after the current request is completed. You can rearrange this code so that threads are used.
