updating simple-server example link

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -27,7 +27,7 @@ We've shortened all these steps to **just 4**, making it easy to develop your fr
 
 ## Structure of a WSBLib server
 
-Next, we will show the basic structure of a WSBLib server and explain the function of each of the classes, methods and others. Here's the [code for this simple server](https://github.com/firlast/wsblib/tree/master/examples/simple-server):
+Next, we will show the basic structure of a WSBLib server and explain the function of each of the classes, methods and others. Here's the [code for this simple server](https://github.com/firlast/wsblib/blob/v1.0.0/examples/simple-server/app.py):
 
 ```python
 from wsblib.route import Route
