update code in "structure of a wsblib server" section

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -36,6 +36,8 @@ from wsblib.request import ProcessRequest
 from wsblib.request import RequestData
 from wsblib import log
 
+import http_pyparser
+
 
 def index():
     return 'Hello World!'
