adding tutorial conclusion

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -220,3 +220,5 @@ if processed_request:
     client.send_message(http)
     client.destroy()
 ```
+
+After these **06 steps**, the request was processed and the response was sent to the client.
