update example code in 1.0.0 documentation

--- a/docs/1.0.0.md
+++ b/docs/1.0.0.md
@@ -60,7 +60,7 @@ while True:
         process_type = processed_request.type
 
         if process_type == 'route':
-            response = processed_request.route.get_route_response(request_data, use_globals)
+            response = processed_request.route.get_route_response(request_data)
         else:
             response = processed_request.route.get_callback_response(request_data)
 
